<resources>
    <string name="app_name">Health4U</string>
    <string name="botonsiguiente">Siguiente</string>
<<<<<<< HEAD
    <string name="botonCancelar">Cancelar</string>

    <string name="botonGuardar">Guardar</string>

    <string name="textMedicamento">PROGRAMAR </string>
    <string name="textMedicamento2">MEDICAMENTO</string>
    <string name="TituloCuadroNombre">NOMBRE DE MEDICAMENTO</string>
    <string name="cuadroEjNombreMed">Ej: Paracetamol</string>
    <string name="cuadroDosis">DOSIS A CONSUMIR</string>
    <string name="cuadroEjDosis">En miligramos(mg)</string>
    <string name="MarcaDeAgua">HEALTH4U</string>
    <string name="textFechaIniMedicamento">FECHA INICIO</string>
    <string name="textFechaFinMedicamento">FECHA FIN</string>
    <string name="textEjFecha">dd/mm/aaaa</string>
    <string name="Opcional">OPCIONAL</string>
    <string name="textPeriodicidad">PERIODICIDAD</string>
    <string name="textEjPeriodicidad">Ej:*Cada 5 Horas*</string>
    <string name="HoraInicio">HORA INICIO</string>
    <string name="Hora">00</string>
    <string name="Minuto">00</string>
    <string name="DosPuntos">:</string>

    //SEBASTIAN
    <string name="TM">TOMAR MEDICAMENTO</string>
    <string name="tv1">NOMBRE DE LA CITA</string>
    <string name="tv2">HEALTH4U</string>
    <string name="tv3">PROGRAMAR CITA</string>
    <string name="btCancel">CANCELAR</string>
    <string name="btNext">SIGUIENTE</string>
    <string name="tv6">FECHA</string>
    <string name="tv7">HORA</string>
    <string name="tv8">DESCRIPCION</string>
    <string name="tv9">DIRECCION</string>
    <string name="btProgramarCita">PROGRAMAR CITA</string>
    <string name="btPerfil">CAMBIAR PERFIL</string>
    <string name="btProgramarDroga">PROGRAMAR MEDICAMENTO</string>
    <string name="btCalendar">VER CALENDARIO</string>
    <string name="btHistory">VER HISTORIAL</string>
    <string name="btDescripcion">DESCRIPCION</string>
    <string name="btAdress">DIRECCION</string>
    <string name="btGuardar">GUARDAR</string>
    <string name="tv12">OPCIONAL</string>
    <string name="tv13">Avenida,Calle,Nro</string>
    <string name="tv14">dd/mm/aaaa</string>
    <string name="nomDoctor">Ej:Cardiólogo,Dermatólogo,etc</string>
    <string name="tv15">Notas u observaciones</string>
    <string name="hora">HR:MIN</string>
    <string name="tv50"></string>
    <string name="tv60"></string>

    <string name="tv0">HEALTH4U</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="Et0">Nombre de Usuario</string>
    <string name="BotonMas">+</string>
    <string name="tv22">Empieza creando tu perfil</string>
    <string name="tv30">Ingresa tus datos</string>
    <string name="tv4">NOMBRE</string>
    <string name="Et">Ingresar Nombre...</string>
    <string name="BotonSiguiente">SIGUIENTE</string>
    <string name="tv5">FECHA DE NACIMIENTO</string>
    <string name="Et2">dd/mm/aaaa</string>
    <string name="tv31">*OPCIONAL</string>
    <string name="tv37">ENFERMEDAD DE BASE</string>
    <string name="tv38">PESO</string>
    <string name="et3">Ej: Diabetes, etc...</string>
    <string name="et4">Ej: 60 Kg...</string>
    <string name="BotonGuardar">GUARDAR</string>
    <string name="BotonCancelar">CANCELAR</string>
    <string name="tv39">HEALTH4U</string>

    <string name="BotonLimpiar">LIMPIAR HISTORIAL</string>
    <string name="TienesCita">TIENES UNA CITA</string>
=======
    <string name="tv1">Primer activity</string>
    <string name="botonanterior">anterior</string>
    <string name="tv2">segundo activity</string>
    <string name="textMedicamento">Programar</string>
    <string name="textMedicamento2">Medicamento</string>
    <string name="TituloCuadroNombre">Nombre de Medicamento</string>
    <string name="cuadroEjNombreMed">Ej: Paracetamol</string>
    <string name="MarcaDeAgua">HEALTH4U</string>
    <string name="textFechaIniMedicamento">Fecha Inicio</string>
    <string name="textFechaFinMedicamento">Fecha Fin</string>
    <string name="textEjFecha">dd/mm/yy</string>
    <string name="textPeriodicidad">Periodicidad</string>
    <string name="textEjPeriodicidad">Ej:*Cada 5 Horas*</string>
    <string name="textCheckHoras">Horas</string>
>>>>>>> 98a5e2fe45e4dd30b1d3e87698773f3b879bc014

</resources>