<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B1D0E0"
        android:backgroundTint="#b1d0e0"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".IngresarEnfermedad">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="301dp"
            android:layout_height="62dp"
            android:text="@string/tv30"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="93dp"
            android:layout_height="93dp"
            app:srcCompat="@drawable/icono" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/tv31"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="18sp"
            android:translationY="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:text="@string/tv37"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/enfBase"
            android:layout_width="297dp"
            android:layout_height="48dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/et3"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationY="-15dp"
            android:digits=" ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz
"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:text="@string/tv38"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/kilos"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/et4"
            android:inputType="text|numberDecimal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationY="-15dp"
            android:digits="1234567890.
"/>

        <Button
            android:id="@+id/buttonCancelar2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/mcgpalette0_400"
            android:fontFamily="@font/open_sans"
            android:onClick="Bienvenido"
            android:text="@string/botonCancelar"
            android:textColor="@color/black"
            android:translationX="-150dp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textdosis" />

        <Button
            android:id="@+id/buttonCancelar3"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/mcgpalette0_400"
            android:fontFamily="@font/open_sans"
            android:onClick="Guardar"
            android:text="@string/BotonGuardar"
            android:textColor="@color/black"
            android:translationX="20dp"
            android:translationY="-76sp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textdosis" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:text="@string/tv39"
            android:textAlignment="center"
            android:textSize="16sp"
            android:translationY="80dp" />

    </LinearLayout>

    </RelativeLayout>